# ggb-mcpserver

./: .gitignore  PARAM_SPEC_V1.md  README.md  geogebra_runtime.py  geogebra_web_api.py  geogebra_web_api_http.py  ggb_interactive_10dff014.html  langchain_http_demo.py  pyproject.toml  requirements-langchain.txt  requirements.txt  tool_catalog.py  tools_2d_new.py  tools_3d_new.py  tools_function_new.py
.cursor/: mcp.json
drawing_tools/: __init__.py  tool_2d.py  tool_3d.py  tool_catalog.py  tool_function.py
mcp_knowledge/recipes/: foot.md  point_on_major_arc.md  point_on_minor_arc.md  second_intersection.md
mcp_knowledge/resources/: arcs.md  ggb_commands.md  ggb_commands_2d_basic.md  ggb_commands_2d_conics.md  ggb_commands_2d_relations.md  ggb_commands_3d.md  ggb_commands_functions.md  ggb_commands_sliders.md  intersection.md  naming.md  references.md
mcp_server/: __init__.py  app.py  http_runner.py  prompts.py  resources.py  runner.py  tools.py
pic/: ggb_interactive_cc549ed5.html
prompts/: prompts_unified.py
registry/: __init__.py  core.py  models.py
registry/schemas/: __init__.py  common.py  function.py  three_d.py  two_d.py
session/: __init__.py  canvas.py  command_exec.py  config.py  exporter.py  ggb_interactive_37a38bea.html  ggb_interactive_74652758.html  html_build.py  manager.py  models.py  page_ops.py
shapes/: __init__.py
shapes/common/: __init__.py  collector.py  context.py
shapes/functions/: __init__.py  advanced.py  basic.py  polynomials.py  sliders.py
shapes/geometry_2d/: __init__.py  (+4 more)
web/: ggb_2d_shell.html  ggb_3d_shell.html
(+9 files in other folders)
