[project]
name = "geo"
version = "0.1.0"
description = "GeoGebra MCP 服务器 - 为 LLM 提供几何图形绘制功能"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.17.0",
    "playwright>=1.40.0",
    "starlette>=0.37.2",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
langchain = [
    "langchain",
    "langchain-openai",
    "langchain-mcp-adapters",
    "python-dotenv",
]
